--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
-		<script type="module" src="./pieces.js"></script>
+		<!-- <script type="module" src="./pieces.js"></script> -->
+		<script type="module" src="./maj.js"></script>
 	</head>
 	<body>
 		<header>
@@ -28,6 +29,13 @@
 
 			<!-- Fiches produits -->
 			<section class="fiches">
+                <div class="abordables">
+                    <p>pieces abordables:</p>
+
+                </div>
+				<div class="disponible">
+					<p>pieces disponibles</p>
+				</div>
 			</section>
 		</main>
 	</body>
