--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
 		<!-- <script type="module" src="./pieces.js"></script> -->
-		<script type="module" src="./maj.js"></script>
+		<script type="module" src="./pieces.js"></script>
 	</head>
 	<body>
 		<header>
@@ -24,7 +24,7 @@
 				<br>
 				<button class="btn-undes btn">Filtrer les pièces  sans description</button>
                 <br>
-				<button class="btn-map btn">pieces en detail</button>
+				<input type="range" id="prix-max" min="0" max="60" class="bg-blue-300" step="5">
 			</section>
 
 			<!-- Fiches produits -->
