--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 			<img src="../images/logo-les-bonnes-pieces.png" alt="LOGO">
 			<h1>Les Bonnes Pièces</h1>
 		</header>
-		<main>
+		<main class="bg-white">
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
