--- a/public/index.html
+++ b/public/index.html
@@ -8,11 +8,11 @@
 		<script type="module" src="./pieces.js"></script>
 	</head>
 	<body>
-		<header>
+		<header class="rounded-sm">
 			<img src="../images/logo-les-bonnes-pieces.png" alt="LOGO">
 			<h1>Les Bonnes Pièces</h1>
 		</header>
-		<main class="bg-white">
+		<main class="bg-gradient-to-r from-blue-700 to-blue-300 rounded-sm">
 			<!-- Menu de recherche -->
 			<section class="filtres">
 				<h3>Filtres</h3>
