update part style

--- a/public/index.html
+++ b/public/index.html
@@ -24,17 +24,19 @@
 				<br>
 				<button class="btn-undes btn">Filtrer les pièces  sans description</button>
                 <br>
-				<input type="range" id="prix-max" min="0" max="60" class="bg-blue-300" step="5">
+				<input type="range" id="prix-max" min="0" max="60"  step="5">
 			</section>
 
 			<!-- Fiches produits -->
 			<section class="fiches">
-                <div class="abordables">
-                    <p>pieces abordables:</p>
+				<div class="bg-white p-2 rounded shadow-sm">
+					<div class="abordables pb-5 text-[14px]">
+                    <p class="pb-5 text-center font-semibold underline">pieces abordables:</p>
 
                 </div>
-				<div class="disponible">
-					<p>pieces disponibles</p>
+				<div class="disponible text-[14px]">
+					<p class="pb-5 text-center font-semibold underline">pieces disponibles</p>
+				</div>
 				</div>
 			</section>
 		</main>
