--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 	<body>
 		<header class="rounded-sm">
 			<img src="../images/logo-les-bonnes-pieces.png" alt="LOGO">
-			<h1>Les Bonnes Pièces</h1>
+			<h1 class="text-2xl">Les Bonnes Pièces</h1>
 		</header>
 		<main class="bg-gradient-to-r from-blue-700 to-blue-300 rounded-sm">
 			<!-- Menu de recherche -->
