--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
 		<link rel="stylesheet" href="styles.css">
 		<!-- <script type="module" src="./pieces.js"></script> -->
 		<script type="module" src="./pieces.js"></script>
+		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
 	</head>
 	<body>
 		<header class="rounded-sm">
@@ -41,6 +42,9 @@
 
 				<h3>Données</h3>
 				<button class="btn-maj">Mettre à jour les pièces</button>
+
+				<h3>Aperçu des avis</h3>
+				<canvas id="graphique-avis" width="300" height="300"></canvas>
 			</section>
 
 			<!-- Fiches produits -->
