--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,7 @@
 		<meta charset="utf-8">
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
-		<!-- <script type="module" src="./pieces.js"></script> -->
-		<script type="module" src="./pieces.js"></script>
+		<script type="module" src="./pieces.js" defer></script>
 		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
 	</head>
 	<body>
@@ -26,6 +25,11 @@
 				<button class="btn-undes btn">Filtrer les pièces  sans description</button>
 				<br>
 				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
+				<div>
+					<label for="search">Rechercher</label>
+					<input type="search" class="searchProduct shadow-sm bg-slate-400 border-none rounded px-5 py-2" id="search" >
+				</div>
+				
 				<!-- code a ajouter -->
 				<h3>Ajouter un avis</h3>
 				<form class="formulaire-avis">
