--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
 		<title>Les Bonnes Pièces</title>
 		<link rel="stylesheet" href="styles.css">
 		<script type="module" src="./pieces.js" defer></script>
-		<script src="node_modules/chart.js/dist/chart.umd.js" defer></script>
+		<!-- <script src="node_modules/chart.js/dist/chart.umd.js" defer></script> -->
 	</head>
 	<body>
 		<header class="rounded-sm">
@@ -25,10 +25,7 @@
 				<button class="btn-undes btn">Filtrer les pièces  sans description</button>
 				<br>
 				<input type="range" name="prix-max" id="prix-max" min="0" max="60" step="5">
-				<div>
-					<label for="search">Rechercher</label>
-					<input type="search" class="searchProduct shadow-sm bg-slate-400 border-none rounded px-5 py-2" id="search" >
-				</div>
+			
 				
 				<!-- code a ajouter -->
 				<h3>Ajouter un avis</h3>
@@ -47,8 +44,8 @@
 				<h3>Données</h3>
 				<button class="btn-maj">Mettre à jour les pièces</button>
 
-				<h3>Aperçu des avis</h3>
-				<canvas id="graphique-avis" width="300" height="300"></canvas>
+				<!-- <h3>Aperçu des avis</h3>
+				<canvas id="graphique-avis" width="300" height="300"></canvas> -->
 			</section>
 
 			<!-- Fiches produits -->
